cambiate le scritte in inglese

--- a/templates/index.html
+++ b/templates/index.html
@@ -151,15 +151,15 @@
 <h1>SUPER FLOOR_TILES 2012</h1>
 <div class="container">
     <form id="search_form_chiesa" action="/" method="GET">
-        <label for="chiesa_input">Cerca Chiesa:</label>
-        <input type="text" id="chiesa_input" name="query" placeholder="Inserisci il nome della chiesa...">
-        <button type="submit" class="search-button">Cerca</button>
+        <label for="chiesa_input">Search Church:</label>
+        <input type="text" id="chiesa_input" name="query" placeholder="Type church's name...">
+        <button type="submit" class="search-button">Search</button>
     </form>
 
     <form id="search_form_reperto" action="/search_reperto" method="GET">
-        <label for="reperto_input">Cerca Reperto:</label>
-        <input type="text" id="reperto_input" name="query" placeholder="Inserisci il codice del reperto...">
-        <button type="submit" class="search-button">Cerca</button>
+        <label for="reperto_input">Search Artifact:</label>
+        <input type="text" id="reperto_input" name="query" placeholder="Type artifact's code...">
+        <button type="submit" class="search-button">Search</button>
     </form>
 
 
