--- a/templates/index.html
+++ b/templates/index.html
@@ -108,8 +108,7 @@
 
         .map-container {
             width: 100%;
-            height: 500px; /* Aggiunto per garantire una dimensione definita */
-            text-align: center;
+            height: 80vh; /* Utilizzo del 80% dell'altezza della viewport */
         }
 
         .custom-div {
@@ -123,27 +122,6 @@
         #viewDiv {
             width: 100%;
             height: 100%;
-        }
-
-        .login-button {
-            width: 200px;
-            padding: 10px;
-            font-size: 1.6rem;
-            font-weight: bold;
-            background-color: #8B4513;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            text-decoration: none;
-            text-align: center;
-            display: block;
-            margin: 20px auto;
-        }
-
-        .login-button:hover {
-            background-color: #963;
         }
     </style>
 </head>
