--- a/templates/index.html
+++ b/templates/index.html
@@ -198,7 +198,7 @@
 </head>
 <body>
 <h1>SUPER CHURCH-FLOORS</h1>
-<div class="container">
+<div class="container" style="max-width: 600px; margin: 0 auto;">
     <!-- Bottone che attiva il modal -->
     <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#infoModal">
         Info
@@ -217,8 +217,8 @@
 
                     Questa mappa è progettata per mostrarti la posizione delle chiese e i reperti storici conservati all'interno di queste. Puoi esplorare il contenuto della mappa in due modi:<br><br>
 
-                    Ricerca per Nome della Chiesa: Utilizza il campo di ricerca per inserire il nome della chiesa che ti interessa. Questo ti permetterà di visualizzare direttamente tutti i reperti associati a quella specifica chiesa.<br>
-                    Cliccando Direttamente sui Reperti sulla Mappa: Naviga liberamente sulla mappa e clicca sui marker dei reperti per ottenere informazioni dettagliate su ciascuno di essi. Una volta cliccato un reperto, apparirà una finestra popup con ulteriori dettagli riguardanti il reperto selezionato, inclusi il codice del reperto e il codice della chiesa di appartenenza.<br><br>
+                    <strong>Ricerca per Nome della Chiesa</strong>: Utilizza il campo di ricerca per inserire il nome della chiesa che ti interessa. Questo ti permetterà di visualizzare direttamente tutti i reperti associati a quella specifica chiesa.<br>
+                    <strong>Direttamente sui Reperti sulla Mappa</strong>: Naviga liberamente sulla mappa e clicca sui marker dei reperti per ottenere informazioni dettagliate su ciascuno di essi. Una volta cliccato un reperto, apparirà una finestra popup con ulteriori dettagli riguardanti il reperto selezionato, inclusi il codice del reperto e il codice della chiesa di appartenenza.<br><br>
                     Questa piattaforma è stata creata per facilitare l'accesso alle informazioni storiche e culturali delle nostre chiese e per promuovere la conoscenza del patrimonio conservato all'interno di esse.
                 </div>
                 <div class="modal-footer">
@@ -227,6 +227,7 @@
             </div>
         </div>
     </div>
+</div>
 
 <div class="container">
     <form id="search_form_chiesa" action="/" method="GET">
