--- a/templates/clickReperto.html
+++ b/templates/clickReperto.html
@@ -76,7 +76,7 @@
 
 </head>
 <body>
-<a href="/" class="btn btn-primary" id="home-button">Homepage</a>
+<a href="/" class="btn btn-primary" id="home-button">Torna alla Homepage</a>
 <div class="container mt-4">
     <div class="header">
         <h1>Artifact's Details</h1>
