--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
 
         h1 {
             font-size: 3.5rem; /* Aumenta la dimensione del font per maggiore impatto */
-            color: #8B4513; /* Un marrone scuro, ma puoi scegliere un colore che preferisci */
+            color: #8B4513; /* Un marrone scuro */
             text-align: center;
             margin: 20px 0; /* Spazio sopra e sotto il titolo */
             font-weight: bold; /* Grassetto per enfatizzare il testo */
@@ -194,6 +194,7 @@
         .login-button:hover {
             background-color: #963;
         }
+
     </style>
 </head>
 <body>
