--- a/templates/index.html
+++ b/templates/index.html
@@ -85,11 +85,11 @@
     </script>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
-            margin: 0;
-            padding: 0;
+            background-image: url('/static/sfondo1 .jpg');
+            background-size: cover;  /* Copre l'intera finestra di visualizzazione */
+            background-position: center; /* Centra l'immagine sullo schermo */
+            background-repeat: no-repeat; /* Impedisce la ripetizione dell'immagine */
+
         }
 
         .container {
