--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,15 @@
             "esri/views/MapView",
             "esri/WebMap",
             "esri/layers/FeatureLayer",
-            "esri/config"
-        ], function(Map, MapView, WebMap, FeatureLayer, esriConfig) {
+            "esri/config",
+            "esri/widgets/Search",
+            "esri/widgets/LayerList",
+            "esri/widgets/Compass",
+            "esri/widgets/Zoom",
+            "esri/widgets/ScaleBar",
+            "esri/widgets/BasemapToggle",
+            "esri/widgets/Attribution"
+        ], function(Map, MapView, WebMap, FeatureLayer, esriConfig, Search, LayerList, Compass, Zoom, ScaleBar, BasemapToggle) {
             esriConfig.apiKey = "AAPK28024a6180ac48739d279d7a90c08c37z2nA-K4du-xQN6XMFh2rgWo6uM53XTVwJg3XJ8OIXlN5y3i9uyRJh3S6dHbZdzn9";
 
             var layer = new FeatureLayer({
@@ -57,6 +64,50 @@
                 center: [12.3331, 45.4376], // Aggiusta secondo la tua necessità
                 zoom: 12
             });
+
+            var searchWidget = new Search({
+                view: view
+            });
+            view.ui.add(searchWidget, {
+                position: "top-right"
+            });
+
+
+
+            // Aggiungi il widget del compasso
+            var compassWidget = new Compass({
+                view: view
+            });
+            view.ui.add(compassWidget, {
+                position: "top-left"
+            });
+
+            // Aggiungi il widget dello zoom
+            var zoomWidget = new Zoom({
+                view: view
+            });
+            view.ui.add(zoomWidget, {
+                position: "top-left"
+            });
+
+            // Aggiungi il widget della scala
+            var scaleBar = new ScaleBar({
+                view: view
+            });
+            view.ui.add(scaleBar, {
+                position: "bottom-left"
+            });
+
+            // Aggiungi il widget di cambio basemap
+            var basemapToggle = new BasemapToggle({
+                view: view,
+                nextBasemap: "satellite"
+            });
+            view.ui.add(basemapToggle, {
+                position: "bottom-right"
+            });
+
+
 
             view.on("click", function(event) {
                 // Esegui il test di hit per trovare le feature al punto cliccato
