--- a/templates/result.html
+++ b/templates/result.html
@@ -14,6 +14,10 @@
             background-color: #f4f4f9;
             color: #333;
             line-height: 1.6;
+            background-image: url('/static/sfondoArchitettonico.jpg');
+            background-size: cover;  /* Copre l'intera finestra di visualizzazione */
+            background-position: center; /* Centra l'immagine sullo schermo */
+            background-repeat: no-repeat;
         }
 
         .container {
