--- a/templates/result.html
+++ b/templates/result.html
@@ -9,11 +9,16 @@
     <link rel="stylesheet" href="https://js.arcgis.com/4.23/esri/themes/light/main.css">
 
     <style>
+
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f9;
             color: #333;
             line-height: 1.6;
+            background-image: url('/static/sfondoArchitettonico.jpg');
+            background-size: cover;  /* Copre l'intera finestra di visualizzazione */
+            background-position: center; /* Centra l'immagine sullo schermo */
+            background-repeat: no-repeat;
         }
 
         .container {
