--- a/templates/clickReperto.html
+++ b/templates/clickReperto.html
@@ -71,8 +71,8 @@
                 flex: 1;
             }
         }
-        /* Modal Styles */
 
+        /* Modal Styles */
         .modal-dialog {
             margin: 30px auto; /* Centra il modal verticalmente e orizzontalmente */
         }
@@ -109,6 +109,12 @@
             color: black;
             text-decoration: none;
             cursor: pointer;
+        }
+
+        .transcription-container {
+            background-color: #f8f0e0; /* Colore di sfondo grigio chiaro */
+            padding: 20px; /* Aggiungi spaziatura interna per migliorare la leggibilità */
+            border-radius: 10px; /* Bordo arrotondato */
         }
     </style>
 </head>
