--- a/templates/result.html
+++ b/templates/result.html
@@ -100,7 +100,10 @@
             'esri/Map',
             'esri/views/MapView',
             'esri/WebMap',
-            'esri/layers/FeatureLayer'
+            'esri/layers/FeatureLayer',
+            'esri/geometry/elements/GroupElement',
+            'esri/geometry/ExpressionInfo',
+            'esri/geometry/support/elements'
         ], function(esriConfig, Map, MapView, WebMap, FeatureLayer) {
 
             esriConfig.apiKey = "AAPK28024a6180ac48739d279d7a90c08c37z2nA-K4du-xQN6XMFh2rgWo6uM53XTVwJg3XJ8OIXlN5y3i9uyRJh3S6dHbZdzn9";
