--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://js.arcgis.com/4.23/esri/themes/light/main.css">
     <link rel="icon" href="/static/icon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://js.arcgis.com/4.23/"></script>
@@ -127,13 +128,17 @@
         }
 
         h1 {
+            font-family: 'Playfair Display', serif; /* Utilizza Playfair Display per il titolo */
             font-size: 3.5rem; /* Aumenta la dimensione del font per maggiore impatto */
-            color: #8B4513; /* Un marrone scuro, ma puoi scegliere un colore che preferisci */
+            color: #d4af37; /* Colore oro */
             text-align: center;
-            margin: 20px 0; /* Spazio sopra e sotto il titolo */
-            font-weight: bold; /* Grassetto per enfatizzare il testo */
+            margin: 20px 0;
+            font-weight: 700; /* Grassetto per enfatizzare il testo */
             letter-spacing: 1px; /* Spaziatura tra le lettere per un effetto più drammatico */
+            text-shadow: 2px 2px 2px #000, -2px -2px 2px #000, 2px -2px 2px #000, -2px 2px 2px #000; /* Bordo nero intorno al testo */
         }
+
+
 
 
         form {
