--- a/templates/result.html
+++ b/templates/result.html
@@ -87,13 +87,10 @@
         <div id="mapView" style="height: 400px;"></div> <!-- Div per la mappa -->
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://js.arcgis.com/4.23/"></script>
     <script>
-        requirejs.config({
-            paths: {
-                esri: 'https://js.arcgis.com/4.23/esri'
-            }
-        });
+
 
         require([
             'esri/config',
@@ -101,12 +98,10 @@
             'esri/views/MapView',
             'esri/WebMap',
             'esri/layers/FeatureLayer',
-            'esri/geometry/elements/GroupElement',
-            'esri/geometry/ExpressionInfo',
-            'esri/geometry/support/elements'
+
         ], function(esriConfig, Map, MapView, WebMap, FeatureLayer) {
 
-            esriConfig.apiKey = "AAPK28024a6180ac48739d279d7a90c08c37z2nA-K4du-xQN6XMFh2rgWo6uM53XTVwJg3XJ8OIXlN5y3i9uyRJh3S6dHbZdzn9";
+            esriConfig.apiKey = "AAPK2a2526a359db46e6b10ce18c8a226987idLBw7Pho1Go5z1MIYijwT9tZkICRaulgZW5wDcny32ZuHOJRfOiuo6CmPwlqKc8";
 
             var layer = new FeatureLayer({
                 url: "https://services7.arcgis.com/BEVijU9IvwRENrmx/arcgis/rest/services/artifacts_web3/FeatureServer/0",
@@ -134,6 +129,9 @@
 
             var map = new Map({
                 basemap: "streets-vector",
+                portalItem: {
+                    id : "cb45f698056b42c88f62bdbc4cbf199f"
+                },
                 layers: [layer]
             });
 
