--- a/templates/result.html
+++ b/templates/result.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="https://js.arcgis.com/4.23/esri/themes/light/main.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://js.arcgis.com/4.23/"></script>
 
     <style>
 
@@ -89,21 +91,27 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
     <script>
-        requirejs.config({
-            paths: {
-                esri: 'https://js.arcgis.com/4.23/esri'
-            }
-        });
+        var webMap = null;
+        var view = null;
 
         require([
-            'esri/config',
-            'esri/Map',
-            'esri/views/MapView',
-            'esri/WebMap',
-            'esri/layers/FeatureLayer'
+            "esri/config",
+            "esri/Map",
+            "esri/views/MapView",
+            "esri/WebMap",
+            "esri/layers/FeatureLayer",
+            "esri/widgets/Search",
+            "esri/widgets/LayerList",
+            "esri/widgets/Compass",
+            "esri/widgets/Zoom",
+            "esri/widgets/ScaleBar",
+            "esri/widgets/BasemapToggle",
+            "esri/widgets/Attribution"
         ], function(esriConfig, Map, MapView, WebMap, FeatureLayer) {
-
-            esriConfig.apiKey = "AAPK28024a6180ac48739d279d7a90c08c37z2nA-K4du-xQN6XMFh2rgWo6uM53XTVwJg3XJ8OIXlN5y3i9uyRJh3S6dHbZdzn9";
+            if (!window.arcGISConfigured) {
+                esriConfig.apiKey = "AAPK28024a6180ac48739d279d7a90c08c37z2nA-K4du-xQN6XMFh2rgWo6uM53XTVwJg3XJ8OIXlN5y3i9uyRJh3S6dHbZdzn9";
+                window.arcGISConfigured = true;
+            }
 
             var layer = new FeatureLayer({
                 url: "https://services7.arcgis.com/BEVijU9IvwRENrmx/arcgis/rest/services/artifacts_web3/FeatureServer/0",
@@ -128,21 +136,21 @@
                 }
             });
 
-
-            var map = new Map({
-                basemap: "streets-vector",
+            webMap = new WebMap({
+                portalItem: {
+                    id: "5ae37f33f52a4eefbc098507ddd9f92d"
+                },
                 layers: [layer]
             });
 
-            var view = new MapView({
-                container: "mapView",
-                map: map,
+            view = new MapView({
+                container: "viewDiv",
+                map: webMap,
                 center: [parseFloat('{{ church_data.longitude }}'), parseFloat('{{ church_data.latitude }}')],
-                zoom: 18
+                zoom: 17
             });
         });
     </script>
-
     <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" aria-haspopup="true" aria-expanded="false">
             Artifacts
